--- a/tests/PEAR_Installer/test_upgrade_pecl/package.xml
+++ b/tests/PEAR_Installer/test_upgrade_pecl/package.xml
@@ -47,79 +47,61 @@ http://snaps.php.net/win32/PECL_4_3/php_sqlite.dll
 single string would not work if you looked at the return value.  The fix for
 this case is to use the new sqlite_exec() function instead. (Stas)</notes>
     <filelist>
-      <file role="src" name="config.m4"/>
-      <file role="src" name="sqlite.c"/>
-      <file role="src" name="sqlite.dsp"/>
-      <file role="src" name="php_sqlite.h"/>
-      <file role="src" name="php_sqlite.def"/>
+      <file role="php" name="config.m4"/>
+      <file role="php" name="sqlite.c"/>
+      <file role="php" name="sqlite.dsp"/>
+      <file role="php" name="php_sqlite.h"/>
+      <file role="php" name="php_sqlite.def"/>
       <file role="doc" name="CREDITS"/>
       <file role="doc" name="README"/>
       <file role="doc" name="TODO"/>
       <file role="doc" name="sqlite.php"/>
-      <file role="test" name="tests/sqlite_001.phpt"/>
-      <file role="test" name="tests/sqlite_002.phpt"/>
-      <file role="test" name="tests/sqlite_003.phpt"/>
-      <file role="test" name="tests/sqlite_004.phpt"/>
-      <file role="test" name="tests/sqlite_005.phpt"/>
-      <file role="test" name="tests/sqlite_006.phpt"/>
-      <file role="test" name="tests/sqlite_007.phpt"/>
-      <file role="test" name="tests/sqlite_008.phpt"/>
-      <file role="test" name="tests/sqlite_009.phpt"/>
-      <file role="test" name="tests/sqlite_010.phpt"/>
-      <file role="test" name="tests/sqlite_011.phpt"/>
-      <file role="test" name="tests/sqlite_012.phpt"/>
-      <file role="test" name="tests/sqlite_013.phpt"/>
-      <file role="test" name="tests/sqlite_014.phpt"/>
-      <file role="test" name="tests/sqlite_015.phpt"/>
-      <file role="test" name="tests/sqlite_016.phpt"/>
-      <file role="test" name="tests/sqlite_017.phpt"/>
-      <file role="test" name="tests/blankdb.inc"/>
       <file role="doc" name="libsqlite/README"/>
-      <file role="src" name="libsqlite/VERSION"/>
-      <file role="src" name="libsqlite/src/attach.c"/>
-      <file role="src" name="libsqlite/src/auth.c"/>
-      <file role="src" name="libsqlite/src/btree.c"/>
-      <file role="src" name="libsqlite/src/btree_rb.c"/>
-      <file role="src" name="libsqlite/src/build.c"/>
-      <file role="src" name="libsqlite/src/copy.c"/>
-      <file role="src" name="libsqlite/src/date.c"/>
-      <file role="src" name="libsqlite/src/delete.c"/>
-      <file role="src" name="libsqlite/src/encode.c"/>
-      <file role="src" name="libsqlite/src/expr.c"/>
-      <file role="src" name="libsqlite/src/func.c"/>
-      <file role="src" name="libsqlite/src/hash.c"/>
-      <file role="src" name="libsqlite/src/insert.c"/>
-      <file role="src" name="libsqlite/src/main.c"/>
-      <file role="src" name="libsqlite/src/opcodes.c"/>
-      <file role="src" name="libsqlite/src/os.c"/>
-      <file role="src" name="libsqlite/src/pager.c"/>
-      <file role="src" name="libsqlite/src/parse.c"/>
-      <file role="src" name="libsqlite/src/parse.y"/>
-      <file role="src" name="libsqlite/src/pragma.c"/>
-      <file role="src" name="libsqlite/src/printf.c"/>
-      <file role="src" name="libsqlite/src/random.c"/>
-      <file role="src" name="libsqlite/src/select.c"/>
-      <file role="src" name="libsqlite/src/table.c"/>
-      <file role="src" name="libsqlite/src/tokenize.c"/>
-      <file role="src" name="libsqlite/src/trigger.c"/>
-      <file role="src" name="libsqlite/src/update.c"/>
-      <file role="src" name="libsqlite/src/util.c"/>
-      <file role="src" name="libsqlite/src/vacuum.c"/>
-      <file role="src" name="libsqlite/src/vdbe.c"/>
-      <file role="src" name="libsqlite/src/vdbeaux.c"/>
-      <file role="src" name="libsqlite/src/where.c"/>
-      <file role="src" name="libsqlite/src/btree.h"/>
-      <file role="src" name="libsqlite/src/hash.h"/>
-      <file role="src" name="libsqlite/src/opcodes.h"/>
-      <file role="src" name="libsqlite/src/os.h"/>
-      <file role="src" name="libsqlite/src/pager.h"/>
-      <file role="src" name="libsqlite/src/parse.h"/>
-      <file role="src" name="libsqlite/src/sqlite_config.w32.h"/>
-      <file role="src" name="libsqlite/src/sqlite.h.in"/>
-      <file role="src" name="libsqlite/src/sqliteInt.h"/>
-      <file role="src" name="libsqlite/src/sqlite.w32.h"/>
-      <file role="src" name="libsqlite/src/vdbe.h"/>
-      <file role="src" name="libsqlite/src/vdbeInt.h"/>
+      <file role="php" name="libsqlite/VERSION"/>
+      <file role="php" name="libsqlite/src/attach.c"/>
+      <file role="php" name="libsqlite/src/auth.c"/>
+      <file role="php" name="libsqlite/src/btree.c"/>
+      <file role="php" name="libsqlite/src/btree_rb.c"/>
+      <file role="php" name="libsqlite/src/build.c"/>
+      <file role="php" name="libsqlite/src/copy.c"/>
+      <file role="php" name="libsqlite/src/date.c"/>
+      <file role="php" name="libsqlite/src/delete.c"/>
+      <file role="php" name="libsqlite/src/encode.c"/>
+      <file role="php" name="libsqlite/src/expr.c"/>
+      <file role="php" name="libsqlite/src/func.c"/>
+      <file role="php" name="libsqlite/src/hash.c"/>
+      <file role="php" name="libsqlite/src/insert.c"/>
+      <file role="php" name="libsqlite/src/main.c"/>
+      <file role="php" name="libsqlite/src/opcodes.c"/>
+      <file role="php" name="libsqlite/src/os.c"/>
+      <file role="php" name="libsqlite/src/pager.c"/>
+      <file role="php" name="libsqlite/src/parse.c"/>
+      <file role="php" name="libsqlite/src/parse.y"/>
+      <file role="php" name="libsqlite/src/pragma.c"/>
+      <file role="php" name="libsqlite/src/printf.c"/>
+      <file role="php" name="libsqlite/src/random.c"/>
+      <file role="php" name="libsqlite/src/select.c"/>
+      <file role="php" name="libsqlite/src/table.c"/>
+      <file role="php" name="libsqlite/src/tokenize.c"/>
+      <file role="php" name="libsqlite/src/trigger.c"/>
+      <file role="php" name="libsqlite/src/update.c"/>
+      <file role="php" name="libsqlite/src/util.c"/>
+      <file role="php" name="libsqlite/src/vacuum.c"/>
+      <file role="php" name="libsqlite/src/vdbe.c"/>
+      <file role="php" name="libsqlite/src/vdbeaux.c"/>
+      <file role="php" name="libsqlite/src/where.c"/>
+      <file role="php" name="libsqlite/src/btree.h"/>
+      <file role="php" name="libsqlite/src/hash.h"/>
+      <file role="php" name="libsqlite/src/opcodes.h"/>
+      <file role="php" name="libsqlite/src/os.h"/>
+      <file role="php" name="libsqlite/src/pager.h"/>
+      <file role="php" name="libsqlite/src/parse.h"/>
+      <file role="php" name="libsqlite/src/sqlite_config.w32.h"/>
+      <file role="php" name="libsqlite/src/sqlite.h.in"/>
+      <file role="php" name="libsqlite/src/sqliteInt.h"/>
+      <file role="php" name="libsqlite/src/sqlite.w32.h"/>
+      <file role="php" name="libsqlite/src/vdbe.h"/>
+      <file role="php" name="libsqlite/src/vdbeInt.h"/>
     </filelist>
   </release>
   <changelog>
