Request #16396 	package-dependencies should allow package names
git-svn-id: http://svn.php.net/repository/pear/pear-core/pear/pear-core/trunk@286492 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/PEAR/Command/Package.xml
+++ b/PEAR/Command/Package.xml
@@ -170,7 +170,8 @@ release), pass them as additional parameters.
   <shortcut>pd</shortcut>
   <options />
   <doc>
-List all dependencies the package has.</doc>
+List all dependencies the package has.
+Can take a tgz / tar file or a package name of an installed package.</doc>
  </package-dependencies>
  <sign>
   <summary>Sign a package distribution file</summary>
