--- a/package.xml
+++ b/package.xml
@@ -91,7 +91,10 @@
   <license>New BSD License</license>
   <state>stable</state>
   <notes>
-* Fixed [SECURITY]: Symlink attack in PEAR install [dufuz]
+* Fixed Bug #18056 [SECURITY]: Symlink attack in PEAR install [dufuz]
+
+This feature is implemented as a result of the above fix
+* Implemented Request #16648: Use TMPDIR for builds instead of /var/tmp [dufuz]
   </notes>
   <deps>
    <dep type="php" rel="ge" version="4.4.0"/>
