--- a/package.xml
+++ b/package.xml
@@ -87,7 +87,7 @@
   </maintainers>
  <release>
   <version>1.9.2</version>
-  <date>2010-05-26</date>
+  <date>2011-02-28</date>
   <license>New BSD License</license>
   <state>stable</state>
   <notes>
@@ -101,6 +101,9 @@
   * Fixed Bug #17997: Strange output if directories are not writeable [dufuz]
   * Fixed Bug #18001: PEAR/RunTest coverage fails [dufuz]
   * Fixed Bug #18056 [SECURITY]: Symlink attack in PEAR install [dufuz]
+  * Fixed Bug #18218: "pear package" does not allow the use of late static binding [dufuz and Christer Edvartsen]
+  * Fixed Bug #18238: Wrong return code from "pear help" [till]
+  * Fixed Bug #18308: Broken error message about missing channel validator [yunosh]
 
   This feature is implemented as a result of #18056
   * Implemented Request #16648: Use TMPDIR for builds instead of /var/tmp [dufuz]
@@ -650,6 +653,30 @@ Alpha1 Release Notes:
 * Fix Bug #17292: Code Coverage in PEAR_RunTest does not work with namespaces [sebastian]
 * Fix Bug #17359: loadExtension() fails over missing dl() when used in multithread env [dufuz]
 * Fix Bug #17378: pear info $package fails if directory with that name exists [dufuz]
+    </notes>
+   </release>
+   <release>
+    <version>1.9.2</version>
+    <date>2011-02-28</date>
+    <license>New BSD License</license>
+    <state>stable</state>
+    <notes>
+    Bugs:
+    * Fixed Bug #17463: Regression: On Windows, svntag [patch by doconnor]
+    * Fixed Bug #17641: pecl-list doesn't sort packages by name [dufuz]
+    * Fixed Bug #17781: invalid argument warning on foreach due to an empty optional dependencie [dufuz]
+    * Fixed Bug #17801: PEAR run-tests wrongly detects php-cgi [patch by David Jean Louis (izi)]
+    * Fixed Bug #17839: pear svntag does not tag package.xml file [dufuz]
+    * Fixed Bug #17986: PEAR Installer cannot handle files moved between packages [dufuz]
+    * Fixed Bug #17997: Strange output if directories are not writeable [dufuz]
+    * Fixed Bug #18001: PEAR/RunTest coverage fails [dufuz]
+    * Fixed Bug #18056 [SECURITY]: Symlink attack in PEAR install [dufuz]
+    * Fixed Bug #18218: "pear package" does not allow the use of late static binding [dufuz and Christer Edvartsen]
+    * Fixed Bug #18238: Wrong return code from "pear help" [till]
+    * Fixed Bug #18308: Broken error message about missing channel validator [yunosh]
+
+    This feature is implemented as a result of #18056
+    * Implemented Request #16648: Use TMPDIR for builds instead of /var/tmp [dufuz]
     </notes>
    </release>
  </changelog>
